# RustChef

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  evidence-terminal.txt
examples/: README.md
samples/: input.json  input.txt
src/: cli.rs  lib.rs  main.rs  pipeline.rs
src/operations/: base64_op.rs  binary_op.rs  case_op.rs  extract_op.rs  hash_op.rs  hex_op.rs  json_op.rs  mod.rs  rot13_op.rs  text_op.rs  url_op.rs  xor_op.rs
tests/: integration_test.rs
