[package]
name = "chef"
version = "0.1.0"
edition = "2021"
description = "A CyberChef-inspired CLI tool for data transformation, encoding, decoding, hashing, and analysis"

[dependencies]
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
sha-1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
itertools = "0.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
